--- a/dashboard/online_help/templates/online_help/home.html
+++ b/dashboard/online_help/templates/online_help/home.html
@@ -1,7 +1,17 @@
 {% extends 'online_help/base.html' %}
 {% block content %}
-<h1>Welcome to the Online Help Dashboard</h1>
-
-
+    <h1>Welcome to the Radiant Help Dashboard</h1>
+    <div>
+        Section 1: Overview of the Dashboard.
+    </div>
+    <div>
+        Section 2: Notifications.
+    </div>
+    <div>
+        Section 3: Your pending tasks.
+    </div>
+    <div>
+        Section 4: Your recent activity.
+    </div>
 
 {% endblock content %}
