--- a/dashboard/online_help/templates/online_help/users.html
+++ b/dashboard/online_help/templates/online_help/users.html
@@ -3,4 +3,9 @@
 
 {% block content %}
 <h1>Users</h1>
+<ul>
+    {% for user in users %}
+        <li>{{ user }}</li>
+    {% endfor %}
+</ul>
 {% endblock content %}
