with displaying sections, sub, color
next himay-himayin pano idisplay sa web

--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -4,6 +4,42 @@
 {% block content %}
     <h1>Tasks</h1>
     <div>
+        Group 1: Online Help User Guides
+        <br>
+        Then for each section, list the section with subsections
+        <br>
+        Later mo na lang isipin kung pano maganda mapakita yung sections and subsections
+
+    </div>
+    <br>
+    <div>
+        Group 2: Online Help Reference
+        <br>
+        Then for each section, list the section with subsections
+        <br>
+        Later mo na lang isipin kung pano maganda mapakita yung sections and subsections
+
+    </div>
+    <br>
+    <div>
+        Group 3: Standalone Tools
+        <br>
+        Then for each section, list the section with subsections
+        <br>
+        Later mo na lang isipin kung pano maganda mapakita yung sections and subsections
+
+    </div>
+    <br>
+    <div>
+        Group 4: PDF Documents
+        <br>
+        Then for each section, list the section with subsections
+        <br>
+        Later mo na lang isipin kung pano maganda mapakita yung sections and subsections
+
+    </div>
+    <br>
+    <div>
         Yellow Tasks (In progress, need to update)
         <ul>
             {% for section in sections %}
