--- a/dashboard/online_help/templates/online_help/base.html
+++ b/dashboard/online_help/templates/online_help/base.html
@@ -1,4 +1,11 @@
+{% load static %}
 {% include 'online_help/navbar.html' %}
+<head>
+    <title>Online Help</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/tasks.css' %}">
+</head>
 <hr>
 {% block content %}{% endblock content %}
 
