--- a/dashboard/online_help/static/css/base.css
+++ b/dashboard/online_help/static/css/base.css
@@ -4,13 +4,7 @@ body {
 }
 
 h1 {
-    color: #b01616;
+    color: #333;
     text-align: center;
-    margin-top: 20px;
-}
-
-.four-boxes {
-    display: flex;
-    justify-content: center;
     margin-top: 20px;
 }
