--- a/dashboard/online_help/templates/online_help/base.html
+++ b/dashboard/online_help/templates/online_help/base.html
@@ -4,9 +4,13 @@
     <title>Online Help</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/tasks.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <hr>
+
+{% block title %} {% endblock title %}
 {% block content %}{% endblock content %}
 
 <hr>
