--- a/dashboard/online_help/templates/online_help/navbar.html
+++ b/dashboard/online_help/templates/online_help/navbar.html
@@ -1,7 +1,29 @@
 {% load static %}
-<nav>
-    <a href="{% url 'online_help:home' %}">Dashboard</a>
-    <a href="{% url 'online_help:tasks' %}">Tasks</a>
-    <a href="{% url 'online_help:users' %}">Users</a>
-    <a href="{% url 'online_help:something' %}">Something</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'online_help:home' %}">Online Help</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'online_help:home' %}">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'tasks' %}active{% endif %}" href="{% url 'online_help:tasks' %}">Tasks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'users' %}active{% endif %}" href="{% url 'online_help:users' %}">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'something' %}active{% endif %}" href="{% url 'online_help:something' %}">Something</a>
+                </li>
+                <li class="nav-item">
+                    <button id="themeToggle" class="btn btn-outline-light ms-3">Toggle Theme</button>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
