--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -13,7 +13,7 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="p-4 bg-primary text-white rounded scroll-box">
-                    <h1>Group 1: Online Help User Guides</h1>
+                    <h1>Online Help User Guides</h1>
                     <br>
                     {% for section in section_user_guide %}
                         <h2>{{ section.Section }}</h2>
@@ -31,7 +31,7 @@
 
             <div class="col-md-6">
                 <div class="p-4 bg-success text-white rounded scroll-box">
-                    <h1>Group 2: Online Help Reference</h1>
+                    <h1>Online Help Reference</h1>
                     <br>
                     {% for section in section_reference %}
                         <h2>{{ section.Section }}</h2>
@@ -49,7 +49,7 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="p-4 bg-warning text-dark rounded scroll-box">
-                    <h1>Group 3: Standalone Tools</h1>
+                    <h1>Standalone Tools</h1>
                     <br>
                     {% for section in section_standalone %}
                         <h2>{{ section.Section }}</h2>
@@ -66,7 +66,7 @@
 
             <div class="col-md-6">
                 <div class="p-4 bg-danger text-white rounded scroll-box">
-                    <h1>Group 4: PDF Documents</h1>
+                    <h1>PDF Documents</h1>
                     <br>
                     {% for section in section_pdf %}
                         <h2>{{ section.Section }}</h2>
