online help user guide oks na format
next, other boxes

--- a/dashboard/online_help/static/css/base.css
+++ b/dashboard/online_help/static/css/base.css
@@ -8,3 +8,11 @@ h1 {
     text-align: center;
     margin-top: 20px;
 }
+
+.bg-navy {
+    background-color: #001f3f !important; /* Navy blue */
+}
+
+.bg-light-grey {
+    background-color: #e4d7f1 !important; /* Light grey */
+}
