not yet working color for tasks

--- a/dashboard/online_help/templates/online_help/tasks.html
+++ b/dashboard/online_help/templates/online_help/tasks.html
@@ -35,7 +35,11 @@
                                     <tr>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ writer }}</td>
                                         <td style="border: 1px solid #444; padding: 8px;">{{ sub }}</td>
-                                        <td style="border: 1px solid #444; padding: 8px;">{{ color }}</td>
+                                        <td style="border: 1px solid #444; padding: 8px; background-color: '{{ color }}';">
+                                            {{ color }}
+                                        </td>
+
+
                                     </tr>
                                     {% endfor %}
                                 </tbody>
